--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,10 @@
               <p>#node js</p>
             </li>
           </ul>
-          <h2>Programming Across Borders: Ideas, Technologies, Innovations</h2>
-          <button type="button">See project</button>
+          <h2 class="projects-list-title">
+            Programming Across Borders: Ideas, Technologies, Innovations
+          </h2>
+          <button class="projects-button" type="button">See project</button>
         </div>
         <div class="projects-list-image-container">
           <img src="./img/image 1.jpg" alt="" />
@@ -48,8 +50,10 @@
               <p>#node js</p>
             </li>
           </ul>
-          <h2>Programming Across Borders: Ideas, Technologies, Innovations</h2>
-          <button type="button">See project</button>
+          <h2 class="projects-list-title">
+            Programming Across Borders: Ideas, Technologies, Innovations
+          </h2>
+          <button class="projects-button" type="button">See project</button>
         </div>
         <div class="projects-list-image-container">
           <img src="./img/image 2.jpg" alt="" />
@@ -71,8 +75,10 @@
               <p>#node js</p>
             </li>
           </ul>
-          <h2>Programming Across Borders: Ideas, Technologies, Innovations</h2>
-          <button type="button">See project</button>
+          <h2 class="projects-list-title">
+            Programming Across Borders: Ideas, Technologies, Innovations
+          </h2>
+          <button class="projects-button" type="button">See project</button>
         </div>
         <div class="projects-list-image-container">
           <img src="./img/image 3.jpg" alt="" />
